k8s-manifests/01-tickets-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-api
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tickets-api
  template:
    metadata:
      labels:
        app: tickets-api
    spec:
      serviceAccountName: tickets-api-sa
      containers:
        - name: tickets-api
          image: 720472223188.dkr.ecr.us-east-1.amazonaws.com/lab-it-support-lab/tickets-api:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/tickets/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/tickets/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-api
  namespace: default
spec:
  selector:
    app: tickets-api
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
